fixed result display and button alignment

--- a/styles.css
+++ b/styles.css
@@ -11,8 +11,10 @@ body {
     background-color: rgb(43, 176, 238);
     
     display: flex;
+    flex-direction: column;
     flex: 0 0 auto;
     flex-wrap: wrap;
+    gap: 5%;
     justify-content: center;
     align-items: center;
 
@@ -20,38 +22,39 @@ body {
 }
 
 #calculator-display {
-    height: 10%;
+    width: 75%;
     background-color: rgb(237, 242, 248);
 
     display: flex;
-    flex: 0 0 75%;
+    flex: 0 0 10%;
     align-items: center;
     justify-content: flex-end;
 
     padding-right: 3%;
-    /* margin-top: 5%; */
 
     font-size: 2em;
 }
 
 #calculator-buttons-container {
-    height: 70%;
-    background-color: black;
+    width: 78%;
+    /* background-color: black; */
 
     display: flex;
     flex-wrap: wrap;
-    flex: 0 0 78%;
+    flex: 0 0 70%;
+    justify-content: space-between;
+    gap: 1%;
 }
 
 button {
-    flex: 0 0 25%;
-    height: 20%;
+    flex: 0 1 24%;
+    height: 19%;
 }
 
 #clear-button {
-    flex-basis: 50%;
+    flex-basis: 49%;
 }
 
 #equals-button {
-    flex-basis: 50%;
+    flex-basis: 49%;
 }
